--- a/gb/18/8/23/n10662019.md
+++ b/gb/18/8/23/n10662019.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lseeig3883/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lseeig3883/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lseeig3883/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lseeig3883/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lseeig3883/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lseeig3883/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lseeig3883/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多伦多房产成交信息将公开</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/08/CPT123489293_hd-600x400.jpg" />
 <h6>多伦多地产局曾上诉最高法院，要求不向公众公开房屋交易数据。（加通社）
 </h6>
 <hr>
-<p>【大纪元2018年08月24日讯】（大纪元记者周行多伦多报道）加拿大最高法院8月23日表示，不会受理<ahref="https://github.com/lseeig3883/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E5%9C%B0%E4%BA%A7%E5%B1%80.md#1">多伦多地产局</a>（TREB）的上诉。这意味着，多伦多房产的成交历史信息将公诸于众。</p>
-<p>这是一宗竞争局与<ahref="https://github.com/lseeig3883/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E5%9C%B0%E4%BA%A7%E5%B1%80.md#1">多伦多地产局</a>之间的官司。竞争局认为，地产局的网络地产求售服务系统（MSL）限制了公众看到的相关信息，对不是地产局会员的地产经纪不公平。地产局应该公开相关的信息。</p>
+<p>【大纪元2018年08月24日讯】（大纪元记者周行多伦多报道）加拿大最高法院8月23日表示，不会受理<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E5%9C%B0%E4%BA%A7%E5%B1%80.md#1">多伦多地产局</a>（TREB）的上诉。这意味着，多伦多房产的成交历史信息将公诸于众。</p>
+<p>这是一宗竞争局与<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E5%9C%B0%E4%BA%A7%E5%B1%80.md#1">多伦多地产局</a>之间的官司。竞争局认为，地产局的网络地产求售服务系统（MSL）限制了公众看到的相关信息，对不是地产局会员的地产经纪不公平。地产局应该公开相关的信息。</p>
 <p>2016年4月，联邦公平竞争仲裁委员会裁定竞争局胜诉。地产局坚持认为，公开相关的信息会侵犯买卖双方的隐私权，于是提出上诉。</p>
 <p>这是一个争吵了7年后的结果。2011年，作为保护消费者利益的联邦监管机构，竞争局对多伦多地产局阻止相关地产信息公布的政策，提出了法律挑战。地产局在2016年败诉后，到联邦上诉法院上诉。2017年，上诉法院裁决维持原判，地产局继续上诉到加拿大最高法院。</p>
 <p>现在，多伦多地产局只好认输了。</p>
@@ -22,7 +22,7 @@
 <p>叶其亮对地产局的个人隐私担心表示理解。他说，一般来说，“买卖双方都不想公众知道他们的成交价”。</p>
 <p>其实，现在地产经纪没公开的那些成交价信息，公众可以通过在线物业价值服务网站Teranet获得，也可以去找当地的土地登记处。但需要付费才能获得相关的房产销售数据。</p>
 <h2>影响深远</h2>
-<p>安省皇后大学房地产教授安德鲁（John Andrew）认为，加拿大最高法院这次决定的影响将是全国性的，公开相关<ahref="https://github.com/lseeig3883/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E4%BA%A4%E6%98%93.md#1">房地产交易</a>数据的做法，将扩散到加拿大几乎所有地区的房市。因为大多数人都在等待多伦多地产局个案的结局，然后才决定是否同意公开他们的销售数据。</p>
+<p>安省皇后大学房地产教授安德鲁（John Andrew）认为，加拿大最高法院这次决定的影响将是全国性的，公开相关<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E4%BA%A4%E6%98%93.md#1">房地产交易</a>数据的做法，将扩散到加拿大几乎所有地区的房市。因为大多数人都在等待多伦多地产局个案的结局，然后才决定是否同意公开他们的销售数据。</p>
 <p>安德鲁称，多伦多地产局目前的做法，是房地产经纪只在其受密码保护的网站上发布相关的销售信息。他预计，很快就会看到全国范围的行动，要求这些信息公开发布。</p>
 <p>在卑诗省和亚省，当地的地产局并不限制其会员发布此类信息。</p>
 <p>帕萨利斯说，他相信公开房产的历史信息，对买家在考虑如何出价时会有帮助。他们可以看到房子是否在短时间被炒卖了几次；或者是否被从市场上撤下，然后在短时间内重新上市。</p>
@@ -37,47 +37,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/4/26/n10340317.md#1">多伦多高房价祸根是外国买家？</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/5/30/n10441925.md#1">税局盯紧多伦多和温哥华地产逃税</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/6/5/n10458304.md#1">喜欢豪华住宅 中国买家青睐哈利法克斯</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/6/6/n10461705.md#1">征税20%也挡不住 中国人海外疯狂购房</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/6/13/n10482141.md#1">加强房产审计 加拿大税务局追回6亿税款</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/20/n13174220.md#1">加拿大大选重要议题：如何解决住房危机</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/18/n13169456.md#1">多伦多爱静阁及Jane-Finch地段房价涨2成多</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/16/n13166041.md#1">纳税人联盟提醒：渥京或征主要住宅增值税</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/18/n13168852.md#1">租房需求增 多伦多公寓市场反弹</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/18/n13168995.md#1">地产经纪：留学生回流多伦多 租房市场回温</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/26/n10340317.md#1">多伦多高房价祸根是外国买家？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/30/n10441925.md#1">税局盯紧多伦多和温哥华地产逃税</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/5/n10458304.md#1">喜欢豪华住宅 中国买家青睐哈利法克斯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/6/n10461705.md#1">征税20%也挡不住 中国人海外疯狂购房</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/13/n10482141.md#1">加强房产审计 加拿大税务局追回6亿税款</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753004.md#1">GTA五月房产交易下降39%?房价涨近10%?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751210.md#1">多伦多唐人街一批商铺未交地税 市府正在拍卖</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13750537.md#1">油价涨 带火卡尔加里商业地产</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13750578.md#1">满银：多伦多郊区房价高估74% 高估程度空前</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13750571.md#1">加拿大央行连续加息 房价不久或跌两位数</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/17/n13169214.md#1">【未解之谜】被神选中的大师们</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/7/23/n13108843.md#1">【命理】一个人做了坏事欠债可以不还吗？</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/15/n13163984.md#1">【馨香雅句】你喜欢的颜色吸引哪种能量</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/19/n13174434.md#1">【未解之谜】巨星“史泰龙”的前世今生</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13180040.md#1">【未解之谜】首位被FBI公开的外星人</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/23/n13182888.md#1">【时事纵横】浙江官场大震荡 与倒习势力有关？</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/23/n13182764.md#1">【秦鹏直播】习拒G20峰会露面？台促导弹量产</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/23/n13182799.md#1">【新闻看点】复旦正名张文宏 汪洋取代习上位？</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/13/n13159063.md#1">Costco出售的八种大包装健康食品</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179973.md#1">杭州一银行原行长助理揭周江勇落马内情</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179192.md#1">【一线采访】扬州男子闯封锁关卡遭殴打 引民愤</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13180297.md#1">产后复工获赵丽颖助阵 谢娜否认二胎是双胞胎</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13180163.md#1">暗讽塔利班与中共如出一辙 黄明志微博遭封杀</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179064.md#1">好莱坞女星开IG账号 公开阿富汗少女求救信</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/18/n13170824.md#1">2021金曲奖完整得奖名单 华语歌后田馥甄胜出</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/23/n13180825.md#1">曾多次遭人背叛 黄明志叹：饮水思源观念式微</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/21/n13177668.md#1">《斯卡罗》查马克淋巴癌病逝 有这种肿块快就医</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179064.md#1">好莱坞女星开IG账号 公开阿富汗少女求救信</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179166.md#1">3岁儿子讲述前世记忆 英国喜剧演员吓坏了</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/22/n13179253.md#1">美国在台协会办中元普渡 网友称赞很专业</a></li>
-<li><a href="https://github.com/lseeig3883/djy/blob/master/gb/21/8/23/n13181173.md#1">小孩房间凌乱不整理？ 这个老爸有奇招克服</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lseeig3883/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lseeig3883/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/23/n10662019.htm">多伦多房产成交信息将公开</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/23/n10662019.htm">多伦多房产成交信息将公开</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lseeig3883/djy/blob/master/gb/18/8/23/n10662019.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lseeig3883/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lseeig3883/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lseeig3883/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lseeig3883/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lseeig3883/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/8/23/n10662019.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
